--- a/react-jike/package.json
+++ b/react-jike/package.json
@@ -10,9 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/v5-patch-for-react-19": "^1.0.3",
+    "@reduxjs/toolkit": "^2.9.0",
     "antd": "^5.27.3",
+    "axios": "^1.11.0",
+    "echarts": "^6.0.0",
+    "normalize.css": "^8.0.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.2"
   },
   "devDependencies": {
